--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
  <h2>Send Email</h2>
-    <form action="mailto:your.email@example.com" method="post" enctype="text/plain">
+    <form action="mailto:arif261119@gmail.com" method="post" enctype="text/plain">
         <label for="recipient">Recipient:</label>
         <input type="email" id="recipient" name="recipient"><br><br>
         
