--- a/index.html
+++ b/index.html
@@ -23,6 +23,32 @@
             max-width: 100%;
             height: auto;
         }
+        .container2 {
+            max-width: 800px;
+            margin: auto;
+            background: black;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #0073e6;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color:black;
+            
+        }
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
@@ -92,9 +118,53 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Profile</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Hi, this is Md. Ariful Islam. Once again, welcome to my portfolio. I am an experienced and optimistic content writer. I can render quality service for you within the deadline as I am always strict to the time-limit. While hiring me, you do not need to worry about anything, since I can assure you to provide the best and most engaging content with fully On-page SEO optimized, and okay with the other issues like grammar, plagiarigm, punctuation and so on. So, why are you wating? Indeed, you are in the right place and without having a single doubt you can hire me. <br>
+    <p style="color:#ffffff">Hi, this is Md. Ariful Islam. Once again, welcome to my portfolio. I am an experienced and optimistic content writer. I can render quality service for you within the deadline as I am always strict to the time-limit. While hiring me, you do not need to worry about anything, since I can assure you to provide the best and most engaging content with fully On-page SEO optimized, and okay with the other issues like grammar, plagiarigm, punctuation and so on. So, why are you wating? Indeed, you are in the right place and without having a single doubt you can hire me. <br>
     If you want, just jump to my sample contents.  
     </p>
+    <h2 class="w3-text-light-grey">My Education History</h2>
+      <hr style="width:350px" class="w3-opacity">
+<div class="container2" style="color:#ffffff">
+        
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Level</th>
+                    <th>Institution</th>
+                    <th>Location</th>
+                    <th>Years Attended</th>
+                    <th>Degree</th>
+                    <th>Notable Achievements</th>
+                </tr>
+            </thead>
+            <em><tbody>
+                <tr>
+                    <td>High School</td>
+                    <td>Thakurgaon Govt. Boys' High School</td>
+                    <td>Thakurgaon,Rangpur</td>
+                    <td>2013 - 2017</td>
+                    <td>-</td>
+                    <td>Student Cabinet</td>
+                </tr>
+                <tr>
+                    <td>College</td>
+                    <td>Pabna Cadet College</td>
+                    <td>Pabna,Rajshahi</td>
+                    <td>2017 - 2023</td>
+                    <td>Higher Secondary Education</td>
+                    <td><ul><li>College Prefect</li><li>Best Cadet in Academics</li><li>Overall Best Cadet</li></ul></td>
+                </tr>
+                <tr>
+                    <td>University</td>
+                    <td>Khulna Univarsity of Engineering and Technology</td>
+                    <td>Khulna,Bangladesh</td>
+                    <td>2024 - present</td>
+                    <td>Bachelor of Science in IEM</td>
+                    <td>-</td>
+                </tr>
+            </tbody></em>
+        </table>
+    </div>
     <!--
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Bangla Content</p>
@@ -190,35 +260,35 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
-    <h2 class="w3-text-light-grey"><b>My Projects</b></h2>
+    <h2 class="w3-text-light-grey"><b>Writing Projects</b></h2>
     <p><b><i> Just click on your target to see my samples</i></b></p>
     <hr style="width:200px" class="w3-opacity">
 
     <!-- Grid for photos -->
     <div class="image-grid">
         <div class="image-item">
-            <img src="agriculture.jpg" alt="niche 1">
+            <a href="https://drive.google.com/drive/folders/1r_qyJAhGyN98SoBzexMQ--uJfYuZDteQ?usp=drive_link" target="_blank"><img src="agriculture.jpg" alt="niche 1" title="Agriculture"></a>
         </div>
         <div class="image-item">
-            <img src="amazon.jpg" alt="niche 2">
+          <a href="https://drive.google.com/drive/folders/1rq-w8tmM6WhZJW1WgzC8V_98O1bJCJoC?usp=drive_link" target="_blank"><img src="amazon.jpg" alt="niche 2" title="Amazon Product review"></a>
         </div>
         <div class="image-item">
-            <img src="blogpost.png" alt="niche 3">
+            <a href="https://drive.google.com/drive/folders/1rzdYXu8y_ePQSr6Yw_MEP-2MTQdTQxmK?usp=drive_link" target="_blank"><img src="blogpost.png" alt="niche 3" title="Blogpost" ></a>
         </div>
         <div class="image-item">
-            <img src="geotextile.jpg" alt="niche 4">
+            <a href="https://drive.google.com/drive/folders/1rq3MvIVa7WGLyxnsuv1lHL48wSCNx1f3?usp=drive_link" target="_blank"><img src="geotextile.jpg" alt="niche 4" title="Geotextile"></a>
         </div>
         <div class="image-item">
-            <img src="healthcare.png" alt="niche 5">
+           <a href="https://drive.google.com/drive/folders/1ra_zaRqR-Rj5wJRLmrA2zR24C0ELFcN1?usp=drive_link" target="_blank"> <img src="healthcare.png" alt="niche 5" title="HealthCare"></a>
         </div>
         <div class="image-item">
-            <img src="home decor.jpg" alt="niche 6">
+            <a href="https://drive.google.com/drive/folders/1rdO02Ry4TZIu_2Z0gifNEJR8A5ba4bpw?usp=drive_link" target="_blank"><img src="home decor.jpg" alt="niche 6" title="Home Decoration"> </a>
         </div>
         <div class="image-item">
-            <img src="tech.jpg" alt="niche 7">
+           <a href="https://drive.google.com/drive/folders/1rYae_X6RHBJs-e9WLJVm9q_x6bBZ_YfD?usp=drive_link" target="_blank"> <img src="tech.jpg" alt="niche 7" title="Technology"></a>
         </div>
         <div class="image-item">
-            <img src="tour.jpg" alt="niche 8">
+           <a href="https://drive.google.com/drive/folders/1rbS5lZ7pSKMzKiQL4SFkYVJI7XhgsEr6?usp=drive_link" target="_blank"> <img src="tour.jpg" alt="niche 8" title="Traveling"></a>
         </div>
     </div>
     <!-- End photo grid -->
